// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Modal Closable 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="backdrop is-playground"
    onClick={[Function]}
  >
    <div
      className="modal type-primary"
      onClick={[Function]}
    >
      <div
        className="heading"
      >
        <div
          className="icon color-inverted size-md background-muted is-clickable"
          onClick={[Function]}
          style={
            Object {
              "height": 35,
              "width": 35,
            }
          }
        >
          <svg
            height={35}
            viewBox="-3 0 20 20"
            width={35}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M9.707 19.414L0 9.707L9.707 0L11.121 1.414L2.828 9.707L11.121 18L9.707 19.414Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        className="container"
      >
        Successful boar world's somebody herbs helpful spiders Samwise Gamgee helps unlost circles guard? Investment Thofin folly? Troublemaker minutes moldy Rivendell eve late traveling around crescent fault never naught
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Modal Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="backdrop is-playground"
    onClick={[Function]}
  >
    <div
      className="modal type-primary"
      onClick={[Function]}
    >
      <div
        className="heading"
      />
      <div
        className="container"
      >
        Successful boar world's somebody herbs helpful spiders Samwise Gamgee helps unlost circles guard? Investment Thofin folly? Troublemaker minutes moldy Rivendell eve late traveling around crescent fault never naught
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Modal Secondary Action 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="backdrop is-playground"
    onClick={[Function]}
  >
    <div
      className="modal type-primary"
      onClick={[Function]}
    >
      <div
        className="heading"
      >
        <div
          className="icon color-inverted size-md background-muted is-clickable"
          onClick={[Function]}
          style={
            Object {
              "height": 35,
              "width": 35,
            }
          }
        >
          <svg
            height={35}
            viewBox="-3 0 20 20"
            width={35}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M9.707 19.414L0 9.707L9.707 0L11.121 1.414L2.828 9.707L11.121 18L9.707 19.414Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <div
          className="icon color-inverted size-md background-muted is-clickable"
          onClick={[Function]}
          style={
            Object {
              "height": 35,
              "width": 35,
            }
          }
        >
          <svg
            height={35}
            viewBox="5 1 20 20"
            width={35}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M14.93 20.86C9.45472 20.86 5 16.4053 5 10.93C5 5.45472 9.45472 1 14.93 1C20.4053 1 24.86 5.45472 24.86 10.93C24.86 16.4053 20.4053 20.86 14.93 20.86ZM14.93 2.09095C10.0559 2.09095 6.09095 6.05591 6.09095 10.93C6.09095 15.8041 10.0559 19.769 14.93 19.769C19.8041 19.769 23.769 15.8041 23.769 10.93C23.769 6.05591 19.8041 2.09095 14.93 2.09095Z"
              fillRule="evenodd"
            />
            <path
              clipRule="evenodd"
              d="M13.744 15.221L8.67871 10.1423L9.45059 9.37155L13.7458 13.6773L20.41 7.01251L21.1807 7.78439L13.744 15.221Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        className="container"
      >
        Successful boar world's somebody herbs helpful spiders Samwise Gamgee helps unlost circles guard? Investment Thofin folly? Troublemaker minutes moldy Rivendell eve late traveling around crescent fault never naught
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Modal Types 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="backdrop is-playground"
    onClick={[Function]}
  >
    <div
      className="modal type-primary"
      onClick={[Function]}
    >
      <div
        className="heading"
      />
      <div
        className="container"
      >
        Successful boar world's somebody herbs helpful spiders Samwise Gamgee helps unlost circles guard? Investment Thofin folly? Troublemaker minutes moldy Rivendell eve late traveling around crescent fault never naught
      </div>
    </div>
  </div>
  <div
    className="backdrop is-playground"
    onClick={[Function]}
  >
    <div
      className="modal type-secondary"
      onClick={[Function]}
    >
      <div
        className="heading"
      />
      <div
        className="container"
      >
        Successful boar world's somebody herbs helpful spiders Samwise Gamgee helps unlost circles guard? Investment Thofin folly? Troublemaker minutes moldy Rivendell eve late traveling around crescent fault never naught
      </div>
    </div>
  </div>
</div>
`;
